--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.2.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.1.4",
+        "laravel-mix": "git+https://github.com/JeffreyWay/laravel-mix.git",
         "lodash": "^4.17.15",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
