Fix opening hours, reservations, creating order listing, and managing.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -22,6 +22,10 @@
     "/css/components.css": "/css/components.css?id=1fdfaa0f0e7f49b57683",
     "/css/custom-rtl.css": "/css/custom-rtl.css?id=334ac68e73ce2f4d1756",
     "/css/custom-laravel.css": "/css/custom-laravel.css?id=94113c1793155380380c",
+    "/css/select2.min.css": "/css/select2.min.css",
+    "/js/select2.min.js": "/js/select2.min.js",
+    "/js/select2.full.min.js": "/js/select2.full.min.js",
+    "/js/form-select2.js": "/js/form-select2.js",
     "/js/scripts/components.js": "/js/scripts/components.js?id=2ab188ae0fa7b622cdb1",
     "/js/scripts/footer.js": "/js/scripts/footer.js?id=b382ec364916c35eff84",
     "/js/scripts/pages/dashboard-analytics.js": "/js/scripts/pages/dashboard-analytics.js?id=6ef85083f3c1840937ad",
