--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .env
+artisan
 .env.backup
 .phpunit.result.cache
 Homestead.json
@@ -6,4 +7,5 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 /vuexy-shell-scripts
-/public/index.phpgit a
+/public/index.php
+public/index.php
