--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,15 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/actlwznc/public_html/with_public
-    - /bin/cp -R public $DEPLOYPATH
+    - /bin/cp -R public/css $DEPLOYPATH
+    - /bin/cp -R public/data $DEPLOYPATH
+    - /bin/cp -R public/fonts $DEPLOYPATH
+    - /bin/cp -R public/images $DEPLOYPATH
+    - /bin/cp -R public/js $DEPLOYPATH
+    - /bin/cp -R public/php $DEPLOYPATH
+    - /bin/cp -R public/sounds $DEPLOYPATH
+    - /bin/cp -R public/vendors $DEPLOYPATH
+    - /bin/cp .htaccess $DEPLOYPATH
+    - /bin/cp .favicon.ico $DEPLOYPATH
+    - /bin/cp mix-manifest.json $DEPLOYPATH
+    - /bin/cp robots.txt $DEPLOYPATH
