--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,7 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/actlwznc/public_html/with_public
+    - export DEPLOYPATH=/home/actlwznc/public_html/with_backend_public/
     - /bin/cp -R public/css $DEPLOYPATH
     - /bin/cp -R public/data $DEPLOYPATH
     - /bin/cp -R public/fonts $DEPLOYPATH
@@ -10,7 +10,7 @@ deployment:
     - /bin/cp -R public/php $DEPLOYPATH
     - /bin/cp -R public/sounds $DEPLOYPATH
     - /bin/cp -R public/vendors $DEPLOYPATH
-    - /bin/cp .htaccess $DEPLOYPATH
-    - /bin/cp .favicon.ico $DEPLOYPATH
-    - /bin/cp mix-manifest.json $DEPLOYPATH
-    - /bin/cp robots.txt $DEPLOYPATH
+    - /bin/cp public/.htaccess $DEPLOYPATH
+    - /bin/cp public/.favicon.ico $DEPLOYPATH
+    - /bin/cp public/mix-manifest.json $DEPLOYPATH
+    - /bin/cp public/robots.txt $DEPLOYPATH
