--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -11,6 +11,6 @@ deployment:
     - /bin/cp -R public/sounds $DEPLOYPATH
     - /bin/cp -R public/vendors $DEPLOYPATH
     - /bin/cp public/.htaccess $DEPLOYPATH
-    - /bin/cp public/.favicon.ico $DEPLOYPATH
+    - /bin/cp public/favicon.ico $DEPLOYPATH
     - /bin/cp public/mix-manifest.json $DEPLOYPATH
     - /bin/cp public/robots.txt $DEPLOYPATH
