--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -5,6 +5,7 @@ deployment:
     - /bin/cp -R public/css $DEPLOYPATH
     - /bin/cp -R public/data $DEPLOYPATH
     - /bin/cp -R public/fonts $DEPLOYPATH
+    - /bin/cp -R public/images $DEPLOYPATH
     - /bin/cp -R public/js $DEPLOYPATH
     - /bin/cp -R public/php $DEPLOYPATH
     - /bin/cp -R public/sounds $DEPLOYPATH
