--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,11 @@
 
     RewriteEngine On
 
+    RewriteCond %{HTTP_HOST} ^(www\.)(.+) [OR]
+    RewriteCond %{HTTPS} off
+    RewriteCond %{HTTP_HOST} ^(www\.)?(.+)
+    RewriteRule ^ https://%2%{REQUEST_URI} [R=301,L]
+    
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
